--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Hello world</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
+      blanditiis odio sunt dolorum fugit vitae quos doloremque delectus ratione
+      repellendus quasi quod error cupiditate voluptas quis sed quam, vel nam.
+    </p>
+  </body>
 </html>
